--- a/src/components/SpotlightCard/SpotlightCard.scss
+++ b/src/components/SpotlightCard/SpotlightCard.scss
@@ -4,7 +4,7 @@
   border: 1px solid #222;
   background-color: #111;
   padding: 2rem;
-  overflow: hidden;
+  overflow: visible;
   --mouse-x: 50%;
   --mouse-y: 50%;
   --spotlight-color: rgba(255, 255, 255, 0.05);
